--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </section>
         <section></section>
         <footer>
-            <div class="container d-flex-center flex-wrap">
+            <div class="container d-flex-center flex-wrap footer__upper-div">
                 <div class="mr-a margin-a-md">
                     <h3 class="heading-m mb-s">GRANDY.</h3>
                     <p class="text-ss opacity-m mb-s">44 Shirley Ave, West Chicago, IL 60185</p>
@@ -124,7 +124,7 @@
                     <p class="text-ss opacity-m mb-s">hello@gmail.com</p>
                     <p class="text-ss opacity-m mb-s">www.grandy.com</p>
                 </div>
-                <div class="d-flex flex-wrap">
+                <div class="d-flex flex-wrap justify-center">
                     <div class="mr-sm margin-a-ss">
                         <h3 class="mb-s">LINKS</h3>
                         <hr class="mb-ss">
@@ -164,7 +164,13 @@
                     </div>
                 </div>
             </div>
-            <div></div>
+            <div class="footer_lower-div">
+                <div class="container d-flex align-center justify-space-between">
+                    <div><img src="./images/footer-links.JPG"></div>
+                    <h3>www.DownloadNewThemes.com</h3>
+                    <p>&#169; 2017 Grandy. All rights reserved</p>
+                </div>
+            </div>
         </footer>
     </main>
 </body>
