--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
             </div>
             <div class="footer_lower-div">
-                <div class="container d-flex align-center justify-space-between">
+                <div class="container d-flex align-center justify-space-between flex-wrap rg-s footer_lower-div-cont">
                     <div><img src="./images/footer-links.JPG"></div>
                     <h3>www.DownloadNewThemes.com</h3>
                     <p>&#169; 2017 Grandy. All rights reserved</p>
